--- a/exercises/ex06-weights/weights/Cargo.toml
+++ b/exercises/ex06-weights/weights/Cargo.toml
@@ -13,17 +13,18 @@ scale-info = { version = "2.0.1", default-features = false, features = [
 	"derive",
 ] }
 
-frame-benchmarking = "38.0.0"
+frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", optional = true }
 
-frame-support = "38.0.0"
-frame-system = "38.0.0"
-sp-io = "38.0.0"
-sp-std = "14.0.0"
-sp-core = "34.0.0"
+frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
+frame-system  = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
+sp-io         = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
+sp-std        = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
+sp-core        = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
 
 [dev-dependencies]
-pallet-balances = "39.0.0"
-sp-runtime = "39.0.2"
+pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
+sp-io           = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
+sp-runtime      = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
 
 [features]
 # TODO: replace ["std"] with ["std", "runtime-benchmarks"] to activate the benchmark feature
